[package]
name = "playground"
version = "0.1.0"
authors = ["Hollin Wilkins <hollinrwilkins@gmail.com>"]
edition = "2018"

[features]
prost-codec = [
  "raft/prost-codec",
]
protobuf-codec = [
  "raft/protobuf-codec",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
raft = { git = "https://github.com/tikv/raft-rs.git", rev = "f7f7d0121132ef6406b59fc774778285cd1477d6" }
slog = "2.2"
slog-async = { version = "2.3", default-features = false }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
slog-term = "2.4"
slog_derive = "0.1"
prost = "0.5.0"
protobuf = "2.8"
regex = "1.3"
clap = { git = "https://github.com/clap-rs/clap.git", rev = "a2f9fb5f6c2aeeac89c5c638f25dedb9e50bde00" }
error-chain = "0.12.1"
